Сделал потоковонезависимую логику при чтении данных из файла